css and index fix
css and index fix

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ index.html
 <meta name="description" content="Vegan Social Network">
 <title>VegBuddy - The New Hub for Vegans Everywhere</title>
 <head>
-<link rel="stylesheet" type="text/css" href="css/style.css">	
+<link rel="stylesheet" type="text/css" href="css/styles.css">	
 </head>
 <body>
 	Veg Buddy
