--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@ index.html
 <body>
 	Veg Buddy
 	Testing...
-	<img id="mainlogo" src="images/vb_logo.png">
+	<img id="mainlogo" src="images/Veg_Buddy_Logo.png">
 </body>
 </html>
