more work on main page
more work on main page

--- a/index.html
+++ b/index.html
@@ -54,24 +54,30 @@ index.html
 	</header>
 
 	<!--VEGAN OF THE WEEK -->
-	<div class="container">
-		<div class="starter-template">
-			<div id="vegweek" class="container">              
-				<h3>VEGAN OF THE WEEK</h3>
-				<img src="images/veg_week.jpg">
-				<h2>ALLISON MCKENNA</h2>
-				<p>She has been a vegan for several years. Allison spends her free time working in animal shelters and dog rescues. She is an advocate and friend to all animals.</p>
-			</div>
+		<div id="vegweek" class="container">              
+			<h3>VEGAN OF THE WEEK</h3>
+			<img src="images/veg_week.jpg">
+			<h2>ALLISON MCKENNA</h2>
+			<p>She has been a vegan for several years. Allison spends her free time working in animal shelters and dog rescues. She is an advocate and friend to all animals.</p>
 		</div>
-	</div>
 
 	<!-- SLIDER -->
-	<ul class="bxslider" id="slider">
-  		<li><img src="/images/pic1.jpg" /></li>
-  		<li><img src="/images/pic2.jpg" /></li>
-  		<li><img src="/images/pic3.jpg" /></li>
-  		<li><img src="/images/pic4.jpg" /></li>
-	</ul>
+		<ul class="bxslider" id="slider">
+  			<li><img src="/images/pic1.jpg" /></li>
+  			<li><img src="/images/pic2.jpg" /></li>
+  			<li><img src="/images/pic3.jpg" /></li>
+  			<li><img src="/images/pic4.jpg" /></li>
+		</ul>
+
+	<!-- VIDEO OF THE WEEK -->
+	<div class="container" id="videoweek">
+		<div id="videoweektext" class="container">              
+			<h3>VIDEO OF THE WEEK</h3>
+			<p>This week’s video comes from our friends at Herndon Animal Sancutary. This video features the animals at their beautiful and well-kept property where they house over 500 animals. Volunteers and employees work around the clock keeping this place a haven for animals.</p>
+		</div>
+		<iframe id="videocontent" width="360" height="315" src="https://www.youtube.com/embed/hrb_3YxBOo8" frameborder="0" allowfullscreen></iframe>
+	</div>
+
 
 
 
