--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@ index.html
 	<div class="container" id="videoweek">
 		<div id="videoweektext" class="container">              
 			<h3>VIDEO OF THE WEEK</h3>
-			<p>This week’s video comes from our friends at Herndon Animal Sancutary. This video features the animals at their beautiful and well-kept property where they house over 500 animals. Volunteers and employees work around the clock keeping this place a haven for animals.</p>
+			<p>The footage and photographs you will see in this video are from captive animals who were rescued and/or are being rehabilitated at The Wild Animal Sanctuary in Keenesburg, Colorado (http://www.wildanimalsanctuary.org). Their setup is an elevated platform that allows you a unique perspective on a wide open divided enclosure where animals tend to roam as free as they can within the well kept confines of this amazing facility. There are plenty of reviews for this place, and some of you will get it and some of you won't. The point is that this facility exists because there is a need for it, and we were happy to contribute our dollars to help them keep doing what they are doing. The song is a U2 song called "One". I felt it was fitting considering we are all a part of one planet. Hopefully more and more of us will realize this as time goes by. Whatever your take on what should live where and how it should happen, I hope you enjoy the footage, the images, the song, or all just the whole compilation in general!</p>
 		</div>
-		<iframe id="videocontent" width="360" height="315" src="https://www.youtube.com/embed/hrb_3YxBOo8" frameborder="0" allowfullscreen></iframe>
+		<iframe id="videocontent" src="https://www.youtube.com/embed/hrb_3YxBOo8" frameborder="0" allowfullscreen></iframe>
 	</div>
 
 
