--- a/index.html
+++ b/index.html
@@ -16,8 +16,18 @@ index.html
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700' rel='stylesheet' type='text/css'>
 
+<script>
+
+$(document).ready(function(){
+  $('.bxslider').bxSlider();
+});
+
+</script>
+
 </head>
 <body>
+
+	<!-- HEADER -->
 	<header>
 		<div class="container" id="headercust">
         	<div class="navbar-header">
@@ -32,11 +42,9 @@ index.html
 
        		<div id="navbar" class="collapse navbar-collapse">
         		<ul class="nav navbar-nav">
-            		<li class="active"><a href="#">Hello Username!</a></li>
+            		<li class="active"><!--<img src="user_pic.png"--><a href="#">Hello Username!</a></li>
             		<li id="divider">&nbsp;|&nbsp;</li>
-            		<li><a href="#about">Messages</a></li>
-            		<li id="divider">&nbsp;|&nbsp;</li>
-            		<li><a href="#contact">Recipes</a></li>
+            		<li><a href="#about">3 Messages</a></li>
             		<li id="divider">&nbsp;|&nbsp;</li>
             		<li><a href="#contact">Logout</a></li>
         		</ul>
@@ -53,6 +61,27 @@ index.html
 		</div>
 	</header>
 
+	<nav class="navbar navbar-inverse" id="subnav">
+  		<ul class="nav navbar-nav">
+  			<li><a href="index.html">Home</a></li>
+  			<li class="dropdown">
+  				<a href="recipes.html" class="dropdown-toggle" data-toggle="dropdown" role="button" 
+  				aria-haspopup="true" aria-expanded="false">Recipes<span class="caret"></span></a>
+          		<ul class="dropdown-menu">
+            		<li><a href="#">Breakfast</a></li>
+            		<li><a href="#">Lunch</a></li>
+            		<li><a href="#">Dinner</a></li>
+            		<li><a href="#">Dessert</a></li>
+            		<li><a href="#">Snacks</a></li>
+            		<li><a href="#">Appetizers</a></li>
+            		<li><a href="#">Drinks</a></li>
+          		</ul>
+  			</li>
+  			<li><a href="#">Users</a></li>
+  			<li><a href="#">Chatrooms</a></li>
+  		</ul>
+	</nav>
+
 	<!--VEGAN OF THE WEEK -->
 		<div id="vegweek" class="container">              
 			<h3>VEGAN OF THE WEEK</h3>
@@ -63,19 +92,88 @@ index.html
 
 	<!-- SLIDER -->
 		<ul class="bxslider" id="slider">
-  			<li><img src="/images/pic1.jpg" /></li>
-  			<li><img src="/images/pic2.jpg" /></li>
-  			<li><img src="/images/pic3.jpg" /></li>
-  			<li><img src="/images/pic4.jpg" /></li>
+  	<!--		<li><img id="caropic" src="images/caro_01.jpg"></li>
+  			<li><img id="caropic" src="images/caro_02.jpg"></li>
+  			<li><img id="caropic" src="images/caro_03.jpg"></li>
+  			<li><img id="caropic" src="images/caro_04.jpg"></li>
+  	-->
 		</ul>
+	
 
 	<!-- VIDEO OF THE WEEK -->
 	<div class="container" id="videoweek">
+		<iframe id="videocontent" src="https://www.youtube.com/embed/hrb_3YxBOo8" frameborder="0" allowfullscreen></iframe>
 		<div id="videoweektext" class="container">              
 			<h3>VIDEO OF THE WEEK</h3>
 			<p>The footage and photographs you will see in this video are from captive animals who were rescued and/or are being rehabilitated at The Wild Animal Sanctuary in Keenesburg, Colorado (http://www.wildanimalsanctuary.org). Their setup is an elevated platform that allows you a unique perspective on a wide open divided enclosure where animals tend to roam as free as they can within the well kept confines of this amazing facility. There are plenty of reviews for this place, and some of you will get it and some of you won't. The point is that this facility exists because there is a need for it, and we were happy to contribute our dollars to help them keep doing what they are doing. The song is a U2 song called "One". I felt it was fitting considering we are all a part of one planet. Hopefully more and more of us will realize this as time goes by. Whatever your take on what should live where and how it should happen, I hope you enjoy the footage, the images, the song, or all just the whole compilation in general!</p>
 		</div>
-		<iframe id="videocontent" src="https://www.youtube.com/embed/hrb_3YxBOo8" frameborder="0" allowfullscreen></iframe>
+	</div>
+
+	<!-- RECIPES -->
+
+	<!--recipe 1-->
+	<div id="indexrecipe" class="container">           
+		<h3>RECIPE OF THE WEEK</h3>
+		
+		<div class="container" id="indexrec1"> 
+			<img src="indexrec1.jpg">
+			<p>INGREDIENTS
+
+1 tSP plus 1/4 cup extra-virgin olive oil
+
+1 small yellow onion, chopped
+
+2 carrots, diced
+
+1 14.5-ounce can diced tomatoes, including liquid
+
+kosher salt and black pepper
+
+1 15.5-ounce can chickpeas, rinsed and drained
+
+1 15.5-ounce can cannellini beans, rinsed and
+
+drained
+
+1 15.5-ounce can kidney beans, rinsed and drained
+
+1 clove garlic, finely chopped
+
+3tablespoons pine nuts, chopped
+
+1cup fresh flat-leaf parsley, chopped
+
+crusty bread (optional)
+
+DIRECTIONS
+
+Heat 1 tablespoon of the oil in a large saucepan over
+
+medium-high heat. Add the onion and carrots and
+
+cook until tender, about 5 minutes.
+
+Stir in the tomatoes and their liquid, 2 cups water, 1
+
+1⁄2 teaspoons salt, and 1⁄2 teaspoon pepper and bring
+
+to a boil.
+
+Add the chickpeas and cannellini and kidney beans
+
+and cook until heated through, about 3 minutes.
+
+Combine the garlic, pine nuts, parsley, remaining 1⁄4
+
+cup oil, 1⁄4 teaspoon salt, and 1⁄8 teaspoon pepper in a
+
+small bowl.
+
+Divide the chili among individual bowls and top with
+
+the pesto. Serve with the bread, if desired.</p>
+		</div>  
+
 	</div>
 
 
