--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@ $(document).ready(function(){
 	<header>
 		<div class="container" id="headercust">
         	<div class="navbar-header">
-				<img id="mainlogo" src="images/white_logo.png">    
+				<img id="mainlogo" src="images/white_logo.png"><br>
+				<h5>The New Hub for Vegans Everywhere</h5>
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             	<span class="sr-only">Toggle navigation</span>
             	<span class="icon-bar"></span>
@@ -52,7 +53,7 @@ $(document).ready(function(){
     	
     		<div id="search">
 				<form id="newsearch" method="get" action="http://www.google.com">
-		        	<input type="text" id="searchbox">
+		        	<input type="text" id="searchbox" placeholder="&nbsp;&nbsp;SEARCH VEGBUDDY" style="color:#d4d4d4;"></input>
 		        	<button type="submit" class="btn btn-primary" aria-label="Left Align">
   						<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
 					</button>
@@ -63,7 +64,7 @@ $(document).ready(function(){
 
 	<nav class="navbar navbar-inverse" id="subnav">
   		<ul class="nav navbar-nav">
-  			<li><a href="index.html">Home</a></li>
+  			<li style="margin-left:2%;"><a href="index.html">Home</a></li>
   			<li class="dropdown">
   				<a href="recipes.html" class="dropdown-toggle" data-toggle="dropdown" role="button" 
   				aria-haspopup="true" aria-expanded="false">Recipes<span class="caret"></span></a>
@@ -87,7 +88,10 @@ $(document).ready(function(){
 			<h3>VEGAN OF THE WEEK</h3>
 			<img src="images/veg_week.jpg">
 			<h2>ALLISON MCKENNA</h2>
-			<p>She has been a vegan for several years. Allison spends her free time working in animal shelters and dog rescues. She is an advocate and friend to all animals.</p>
+			<p>She has been a vegan for several years. Allison spends her free time working in animal shelters and dog rescues. Allison
+				has rescued over 50 pets in her home town from busy city streets, abusive homes, etc. She devotes her life to being
+				an advocate for animals and loves every second of it. She claims her love of animals ultimately lead her to starting
+				a vegan lifestyle. "It just made sense" Allison says.</p>
 		</div>
 
 	<!-- SLIDER -->
@@ -115,66 +119,127 @@ $(document).ready(function(){
 	<div id="indexrecipe" class="container">           
 		<h3>RECIPE OF THE WEEK</h3>
 		
-		<div class="container" id="indexrec1"> 
-			<img src="indexrec1.jpg">
-			<p>INGREDIENTS
-
-1 tSP plus 1/4 cup extra-virgin olive oil
-
-1 small yellow onion, chopped
-
-2 carrots, diced
-
-1 14.5-ounce can diced tomatoes, including liquid
-
-kosher salt and black pepper
-
-1 15.5-ounce can chickpeas, rinsed and drained
-
-1 15.5-ounce can cannellini beans, rinsed and
-
-drained
-
-1 15.5-ounce can kidney beans, rinsed and drained
-
-1 clove garlic, finely chopped
-
-3tablespoons pine nuts, chopped
-
-1cup fresh flat-leaf parsley, chopped
-
-crusty bread (optional)
-
-DIRECTIONS
-
-Heat 1 tablespoon of the oil in a large saucepan over
-
-medium-high heat. Add the onion and carrots and
-
-cook until tender, about 5 minutes.
-
-Stir in the tomatoes and their liquid, 2 cups water, 1
-
-1⁄2 teaspoons salt, and 1⁄2 teaspoon pepper and bring
-
-to a boil.
-
-Add the chickpeas and cannellini and kidney beans
-
-and cook until heated through, about 3 minutes.
-
-Combine the garlic, pine nuts, parsley, remaining 1⁄4
-
-cup oil, 1⁄4 teaspoon salt, and 1⁄8 teaspoon pepper in a
-
-small bowl.
-
-Divide the chili among individual bowls and top with
-
-the pesto. Serve with the bread, if desired.</p>
+		<!--rec1-->
+		<div class="container" id="indexrec1" style="margin-right: 2%;"> 
+			<img src="images/indexrec1.jpg">
+			<h4>Three Bean Chili</h4>
+			<p><b>INGREDIENTS</b><br>
+				1 tSP plus 1/4 cup extra-virgin olive oil<br>
+				1 small yellow onion, chopped<br>
+				2 carrots, diced<br>
+				1 14.5-ounce can diced tomatoes, including liquid<br>
+				kosher salt and black pepper<br>
+				1 15.5-ounce can chickpeas, rinsed and drained<br>
+				1 15.5-ounce can cannellini beans, rinsed and drained<br>
+				1 15.5-ounce can kidney beans, rinsed and drained<br>
+				1 clove garlic, finely chopped<br>
+				3tablespoons pine nuts, chopped<br>
+				1 cup fresh flat-leaf parsley, chopped<br>
+				crusty bread (optional)<br><br>
+			<b>DIRECTIONS</b><br>
+				Heat 1 tablespoon of the oil in a large saucepan over
+				medium-high heat. Add the onion and carrots and
+				cook until tender, about 5 minutes.<br>
+				Stir in the tomatoes and their liquid, 2 cups water, 1
+				1⁄2 teaspoons salt, and 1⁄2 teaspoon pepper and bring
+				to a boil.<br>
+				Add the chickpeas and cannellini and kidney beans
+				and cook until heated through, about 3 minutes.<br>
+				Combine the garlic, pine nuts, parsley, remaining 1⁄4
+				cup oil, 1⁄4 teaspoon salt, and 1⁄8 teaspoon pepper in a
+				small bowl.
+				<br>Divide the chili among individual bowls and top with
+				the pesto. Serve with the bread, if desired.
+			</p>
 		</div>  
 
+		<!--rec2-->
+		<div class="container" id="indexrec1" style="margin-right: 2%;"> 
+			<img src="images/indexrec1.jpg">
+			<h4>Three Bean Chili</h4>
+			<p><b>INGREDIENTS</b><br>
+				1 tSP plus 1/4 cup extra-virgin olive oil<br>
+				1 small yellow onion, chopped<br>
+				2 carrots, diced<br>
+				1 14.5-ounce can diced tomatoes, including liquid<br>
+				kosher salt and black pepper<br>
+				1 15.5-ounce can chickpeas, rinsed and drained<br>
+				1 15.5-ounce can cannellini beans, rinsed and drained<br>
+				1 15.5-ounce can kidney beans, rinsed and drained<br>
+				1 clove garlic, finely chopped<br>
+				3tablespoons pine nuts, chopped<br>
+				1 cup fresh flat-leaf parsley, chopped<br>
+				crusty bread (optional)<br><br>
+			<b>DIRECTIONS</b><br>
+				Heat 1 tablespoon of the oil in a large saucepan over
+				medium-high heat. Add the onion and carrots and
+				cook until tender, about 5 minutes.<br>
+				Stir in the tomatoes and their liquid, 2 cups water, 1
+				1⁄2 teaspoons salt, and 1⁄2 teaspoon pepper and bring
+				to a boil.<br>
+				Add the chickpeas and cannellini and kidney beans
+				and cook until heated through, about 3 minutes.<br>
+				Combine the garlic, pine nuts, parsley, remaining 1⁄4
+				cup oil, 1⁄4 teaspoon salt, and 1⁄8 teaspoon pepper in a
+				small bowl.
+				<br>Divide the chili among individual bowls and top with
+				the pesto. Serve with the bread, if desired.
+			</p>
+		</div>  
+		<!--rec1-->
+		<div class="container" id="indexrec1"> 
+			<img src="images/indexrec1.jpg">
+			<h4>Three Bean Chili</h4>
+			<p><b>INGREDIENTS</b><br>
+				1 tSP plus 1/4 cup extra-virgin olive oil<br>
+				1 small yellow onion, chopped<br>
+				2 carrots, diced<br>
+				1 14.5-ounce can diced tomatoes, including liquid<br>
+				kosher salt and black pepper<br>
+				1 15.5-ounce can chickpeas, rinsed and drained<br>
+				1 15.5-ounce can cannellini beans, rinsed and drained<br>
+				1 15.5-ounce can kidney beans, rinsed and drained<br>
+				1 clove garlic, finely chopped<br>
+				3tablespoons pine nuts, chopped<br>
+				1 cup fresh flat-leaf parsley, chopped<br>
+				crusty bread (optional)<br><br>
+			<b>DIRECTIONS</b><br>
+				Heat 1 tablespoon of the oil in a large saucepan over
+				medium-high heat. Add the onion and carrots and
+				cook until tender, about 5 minutes.<br>
+				Stir in the tomatoes and their liquid, 2 cups water, 1
+				1⁄2 teaspoons salt, and 1⁄2 teaspoon pepper and bring
+				to a boil.<br>
+				Add the chickpeas and cannellini and kidney beans
+				and cook until heated through, about 3 minutes.<br>
+				Combine the garlic, pine nuts, parsley, remaining 1⁄4
+				cup oil, 1⁄4 teaspoon salt, and 1⁄8 teaspoon pepper in a
+				small bowl.
+				<br>Divide the chili among individual bowls and top with
+				the pesto. Serve with the bread, if desired.
+			</p>
+		</div><br><br>
+			<div class="btn-group btn-group-lg" id="indexreccta">
+  			<button type="button" class="btn btn-primary">
+  				SEE MORE RECIPIES
+  				<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+			</button>
+ 		</div>
 	</div>
+
+	<!-- FOOTER -->
+	<footer>
+		<div class="container" id="footer">
+			<ul class="nav navbar-nav" id="footernav">
+				<li><a href="about.html">ABOUT US</a></li>
+				<li><a href="privacy.html">PRIVACY POLICY</a></li>
+				<li><a href="sitemap.html">SITE MAP</a></li>
+				<li><a href="useragree.html">USER AGREEMENT</a></li>
+				<li><a href="contact.html">CONTACT US</a></li><br>
+			</ul><br><br>
+			<h3>COPYRIGHT 2016 WEB EARTH COOP. 403 EUCLID AVE. SYRACUSE, NY 13023 WEBEARTHCOOP.NET</h3>
+		</div>
+	</footer>
 
 
 
