--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@ $(document).ready(function(){
     	
     		<div id="search">
 				<form id="newsearch" method="get" action="http://www.google.com">
+    			<a href="https://www.facebook.com/VegBuddy"><img id="socmedicon" src="images/socmedindex-01.png"></a>
+    			<a href="https://www.twitter.com/VegBuddy"><img id="socmedicon" style="margin-right:10px;" 
+    				src="images/socmedindex-02.png"></a>
 		        	<input type="text" id="searchbox" placeholder="&nbsp;&nbsp;SEARCH VEGBUDDY" style="color:#d4d4d4;"></input>
 		        	<button type="submit" class="btn btn-primary" aria-label="Left Align">
   						<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
