final main page index
final main page index

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ $(document).ready(function(){
     		<div id="search">
 				<form id="newsearch" method="get" action="http://www.google.com">
     			<a href="https://www.facebook.com/VegBuddy"><img id="socmedicon" src="images/socmedindex-01.png"></a>
-    			<a href="https://www.twitter.com/VegBuddy"><img id="socmedicon" style="margin-right:10px;" 
+    			<a href="https://www.twitter.com/VegBuddy"><img id="socmedicon" style="margin:0 20px 0 5px;" 
     				src="images/socmedindex-02.png"></a>
 		        	<input type="text" id="searchbox" placeholder="&nbsp;&nbsp;SEARCH VEGBUDDY" style="color:#d4d4d4;"></input>
 		        	<button type="submit" class="btn btn-primary" aria-label="Left Align">
@@ -98,13 +98,15 @@ $(document).ready(function(){
 		</div>
 
 	<!-- SLIDER -->
-		<ul class="bxslider" id="slider">
-  	<!--		<li><img id="caropic" src="images/caro_01.jpg"></li>
-  			<li><img id="caropic" src="images/caro_02.jpg"></li>
-  			<li><img id="caropic" src="images/caro_03.jpg"></li>
-  			<li><img id="caropic" src="images/caro_04.jpg"></li>
-  	-->
-		</ul>
+		<div class="container" id="slider">
+	<!--		<ul class="bxslider" >
+  			<li> --><img id="caropic" src="images/caro_01.jpg"> <!-- </li>
+  				<li><img id="caropic" src="images/caro_02.jpg"></li>
+  				<li><img id="caropic" src="images/caro_03.jpg"></li>
+  				<li><img id="caropic" src="images/caro_04.jpg"></li>
+  		
+			</ul> -->
+		</div> 
 	
 
 	<!-- VIDEO OF THE WEEK -->
