--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ $(document).ready(function(){
   				<a href="recipes.html" class="dropdown-toggle" data-toggle="dropdown" role="button" 
   				aria-haspopup="true" aria-expanded="false">Recipes<span class="caret"></span></a>
           		<ul class="dropdown-menu">
-            		<li><a href="#">Breakfast</a></li>
+            		<li><a href="Views/recipes.html">Breakfast</a></li>
             		<li><a href="#">Lunch</a></li>
             		<li><a href="#">Dinner</a></li>
             		<li><a href="#">Dessert</a></li>
@@ -160,8 +160,8 @@ $(document).ready(function(){
 
 		<!--rec2-->
 		<div class="container" id="indexrec1" style="margin-right: 2%;"> 
-			<img src="images/indexrec1.jpg">
-			<h4>Three Bean Chili</h4>
+			<img src="images/indexrec2.jpg">
+			<h4>Hummus and Veggies</h4>
 			<p><b>INGREDIENTS</b><br>
 				1 tSP plus 1/4 cup extra-virgin olive oil<br>
 				1 small yellow onion, chopped<br>
@@ -193,8 +193,8 @@ $(document).ready(function(){
 		</div>  
 		<!--rec1-->
 		<div class="container" id="indexrec1"> 
-			<img src="images/indexrec1.jpg">
-			<h4>Three Bean Chili</h4>
+			<img src="images/indexrec3.jpg">
+			<h4>pesto potatos</h4>
 			<p><b>INGREDIENTS</b><br>
 				1 tSP plus 1/4 cup extra-virgin olive oil<br>
 				1 small yellow onion, chopped<br>
@@ -224,23 +224,25 @@ $(document).ready(function(){
 				the pesto. Serve with the bread, if desired.
 			</p>
 		</div><br><br>
+		<a href="Views/recipes.html">
 			<div class="btn-group btn-group-lg" id="indexreccta">
-  			<button type="button" class="btn btn-primary">
-  				SEE MORE RECIPIES
-  				<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-			</button>
- 		</div>
+  				<button type="button" class="btn btn-primary">
+  					SEE MORE RECIPIES
+  					<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+				</button>
+ 			</div>
+ 		</a>
 	</div>
 
 	<!-- FOOTER -->
 	<footer>
 		<div class="container" id="footer">
 			<ul class="nav navbar-nav" id="footernav">
-				<li><a href="about.html">ABOUT US</a></li>
-				<li><a href="privacy.html">PRIVACY POLICY</a></li>
-				<li><a href="sitemap.html">SITE MAP</a></li>
-				<li><a href="useragree.html">USER AGREEMENT</a></li>
-				<li><a href="contact.html">CONTACT US</a></li><br>
+				<li><a href="Views/about.html">ABOUT US</a></li>
+				<li><a href="Views/privacy.html">PRIVACY POLICY</a></li>
+				<li><a href="Views/sitemap.html">SITE MAP</a></li>
+				<li><a href="Views/useragree.html">USER AGREEMENT</a></li>
+				<li><a href="Views/contact.html">CONTACT US</a></li><br>
 			</ul><br><br>
 			<h3>COPYRIGHT 2016 WEB EARTH COOP. 403 EUCLID AVE. SYRACUSE, NY 13023 WEBEARTHCOOP.NET</h3>
 		</div>
