--- a/index.html
+++ b/index.html
@@ -42,13 +42,18 @@ $(document).ready(function(){
           	</div>
 
        		<div id="navbar" class="collapse navbar-collapse">
-        		<ul class="nav navbar-nav">
-            		<li class="active"><!--<img src="user_pic.png"--><a href="#">Hello Username!</a></li>
+       			<ul class="nav navbar-nav">
+            		<li class="active"><!--<img src="user_pic.png"--><a href="Views/login.html">Login</a></li>
+            		<li id="divider">&nbsp;|&nbsp;</li>
+            		<li><a href="Views/signup.html">Sign-Up</a></li>
+        		</ul>
+        	<!--	<ul class="nav navbar-nav">
+            		<li class="active"><a href="#">Hello Username!</a></li>
             		<li id="divider">&nbsp;|&nbsp;</li>
             		<li><a href="#about">3 Messages</a></li>
             		<li id="divider">&nbsp;|&nbsp;</li>
             		<li><a href="#contact">Logout</a></li>
-        		</ul>
+        		</ul> -->
     		</div><!--/.nav-collapse -->
     	
     		<div id="search">
