--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@ $(document).ready(function(){
   				<a href="recipes.html" class="dropdown-toggle" data-toggle="dropdown" role="button" 
   				aria-haspopup="true" aria-expanded="false">Recipes<span class="caret"></span></a>
           		<ul class="dropdown-menu">
-            		<li><a href="Views/recipes.html">Breakfast</a></li>
-            		<li><a href="#">Lunch</a></li>
-            		<li><a href="#">Dinner</a></li>
-            		<li><a href="#">Dessert</a></li>
-            		<li><a href="#">Snacks</a></li>
-            		<li><a href="#">Appetizers</a></li>
-            		<li><a href="#">Drinks</a></li>
+            		<li><a href="Views/breakfast.html">Breakfast</a></li>
+            		<li><a href="Views/lunch.html">Lunch</a></li>
+            		<li><a href="Views/Dinner.html">Dinner</a></li>
+            		<li><a href="Views/dessert.html">Dessert</a></li>
+            		<li><a href="Views/snacks.html">Snacks</a></li>
+            		<li><a href="Views/appetizers.html">Appetizers</a></li>
+            		<li><a href="Views/drinks.html">Drinks</a></li>
           		</ul>
   			</li>
   			<li><a href="#">Users</a></li>
