recipe and dash
recipe and dash

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ $(document).ready(function(){
 				the pesto. Serve with the bread, if desired.
 			</p>
 		</div><br><br>
-		<a href="Views/recipes.html">
+		<a href="Views/breakfast.html">
 			<div class="btn-group btn-group-lg" id="indexreccta">
   				<button type="button" class="btn btn-primary">
   					SEE MORE RECIPIES
