--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ $(document).ready(function(){
           		<ul class="dropdown-menu">
             		<li><a href="Views/breakfast.html">Breakfast</a></li>
             		<li><a href="Views/lunch.html">Lunch</a></li>
-            		<li><a href="Views/Dinner.html">Dinner</a></li>
+            		<li><a href="Views/dinner.html">Dinner</a></li>
             		<li><a href="Views/dessert.html">Dessert</a></li>
             		<li><a href="Views/snacks.html">Snacks</a></li>
             		<li><a href="Views/appetizers.html">Appetizers</a></li>
