--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@ $(document).ready(function(){
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));
 
+
+
+	$('.carousel').carousel({
+		interval: 3000
+	})
+
 </script>
 
 </head>
@@ -95,8 +101,8 @@ $(document).ready(function(){
             		<li><a href="Views/drinks.html">Drinks</a></li>
           		</ul>
   			</li>
-  			<li><a href="#">Users</a></li>
-  			<li><a href="#">Chatrooms</a></li>
+  			<li><a href="Views/users.html">Users</a></li>
+  		<!--	<li><a href="#">Chatrooms</a></li> -->
   		</ul>
 	</nav>
 
@@ -113,16 +119,48 @@ $(document).ready(function(){
 		</div>
 
 	<!-- SLIDER -->
-		<div class="container" id="slider">
-	<!--		<ul class="bxslider" >
-  			<li> --><img id="caropic" src="images/caro_01.jpg"> <!-- </li>
-  				<li><img id="caropic" src="images/caro_02.jpg"></li>
-  				<li><img id="caropic" src="images/caro_03.jpg"></li>
-  				<li><img id="caropic" src="images/caro_04.jpg"></li>
-  		
-			</ul> -->
-		</div>
-			<div id="fb-root">
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+ 
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="images/caro_01.jpg" alt="...">
+      <div class="carousel-caption">
+      	<h3><b>CLARK AND MARY FARMS</b><br>
+			Our friends from the Northern Cali farm have made a commitment to animals and good health.
+			Learn more about their story: <a href="clarkandmaryfarms.com">clarkandmaryfarms.com</a></h3>
+      </div>
+    </div>
+    <div class="item">
+      <img src="images/caro_02.jpg" alt="...">
+      <div class="carousel-caption">
+      	<h3>Denton Vegan Coop. are dedicated to the production and promotion of making vegan goods more accessible to the Denton, TX area. They believe in educating the public on the benefits of a vegan diet regarding environment, ethics, and health to aid in a sustainable future for our planet.<a href="http://www.dentonvegancoop.com">dentonvegancoop.com</a></h3>
+      </div>
+    </div>
+    <div class="item">
+      <img src="images/caro_03.png" alt="...">
+      <div class="carousel-caption">
+      	<h3>Erin Mckennas Bakery selects all ingredients responsibly and uses our natural sweeteners sparingly. Their goal is to make eating vegan and gluten-free fun and delicious!<a href="https://www.erinmckennasbakery.com">erinmckennasbakery.com</a></h3>
+      </div>
+    </div>
+  </div>
+ 
+  <!-- Controls -->
+  <div id="leftcontrol">
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+</div>
+  <div id="rightcontrol">
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
+</div> <!-- Carousel -->
+
+
+
+		<div id="fb-root">
 		<div class="fb-page" data-href="https://www.facebook.com/VegBuddy/" 
 		data-tabs="timeline" data-width="10%" data-height="100%" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/VegBuddy/" 
 		class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/VegBuddy/">Veg Buddy</a></blockquote>
