--- a/index.html
+++ b/index.html
@@ -160,12 +160,8 @@ $(document).ready(function(){
 
 
 
-		<div id="fb-root">
-		<div class="fb-page" data-href="https://www.facebook.com/VegBuddy/" 
-		data-tabs="timeline" data-width="10%" data-height="100%" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/VegBuddy/" 
-		class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/VegBuddy/">Veg Buddy</a></blockquote>
-	</div>
-	</div>
+	<div class="fb-page" data-href="https://www.facebook.com/vegbuddy" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/vegbuddy" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/vegbuddy">Veg Buddy</a></blockquote></div>
+	
 	</div>
 	
 
