--- a/index.html
+++ b/index.html
@@ -128,19 +128,19 @@ $(document).ready(function(){
       <div class="carousel-caption">
       	<h3><b>CLARK AND MARY FARMS</b><br>
 			Our friends from the Northern Cali farm have made a commitment to animals and good health.
-			Learn more about their story: <a href="clarkandmaryfarms.com">clarkandmaryfarms.com</a></h3>
+			Learn more about their story: <br><a href="clarkandmaryfarms.com">clarkandmaryfarms.com</a></h3>
       </div>
     </div>
     <div class="item">
       <img src="images/caro_02.jpg" alt="...">
       <div class="carousel-caption">
-      	<h3>Denton Vegan Coop. are dedicated to the production and promotion of making vegan goods more accessible to the Denton, TX area. They believe in educating the public on the benefits of a vegan diet regarding environment, ethics, and health to aid in a sustainable future for our planet.<a href="http://www.dentonvegancoop.com">dentonvegancoop.com</a></h3>
+      	<h3>Denton Vegan Coop. are dedicated to the production and promotion of making vegan goods more accessible to the Denton, TX area. They believe in educating the public on the benefits of a vegan diet regarding environment, ethics, and health to aid in a sustainable future for our planet.<br><a href="http://www.dentonvegancoop.com">dentonvegancoop.com</a></h3>
       </div>
     </div>
     <div class="item">
       <img src="images/caro_03.png" alt="...">
       <div class="carousel-caption">
-      	<h3>Erin Mckennas Bakery selects all ingredients responsibly and uses our natural sweeteners sparingly. Their goal is to make eating vegan and gluten-free fun and delicious!<a href="https://www.erinmckennasbakery.com">erinmckennasbakery.com</a></h3>
+      	<h3>Erin Mckennas Bakery selects all ingredients responsibly and uses our natural sweeteners sparingly. Their goal is to make eating vegan and gluten-free fun and delicious!<br><a href="https://www.erinmckennasbakery.com">erinmckennasbakery.com</a></h3>
       </div>
     </div>
   </div>
