php almost done
php almost done

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@ $(document).ready(function(){
 
        		<div id="navbar" class="collapse navbar-collapse">
        			<ul class="nav navbar-nav">
-            		<li class="active"><!--<img src="user_pic.png"--><a href="Views/login.html">Login</a></li>
+            		<li class="active"><!--<img src="user_pic.png"--><a href="Views/login.php">Login</a></li>
             		<li id="divider">&nbsp;|&nbsp;</li>
-            		<li><a href="Views/signup.html">Sign-Up</a></li>
+            		<li><a href="Views/signup.php">Sign-Up</a></li>
             		<li id="divider">&nbsp;|&nbsp;&nbsp;&nbsp;</li>
         	
         	<!--	<ul class="nav navbar-nav">
@@ -71,9 +71,6 @@ $(document).ready(function(){
         		</ul> -->
     					<div id="search">
 							<form id="newsearch" method="get" action="http://www.google.com">
-    						<a href="https://www.facebook.com/VegBuddy"><img id="socmedicon" src="images/socmedindex-01.png"></a>
-    						<a href="https://www.twitter.com/VegBuddy"><img id="socmedicon" style="margin:0 20px 0 5px;" 
-    						src="images/socmedindex-02.png"></a>
 		        			<input type="text" id="searchbox" placeholder="&nbsp;&nbsp;SEARCH VEGBUDDY" style="color:#d4d4d4;"></input>
 		        			<button type="submit" class="btn btn-primary" aria-label="Left Align">
   								<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
@@ -89,19 +86,19 @@ $(document).ready(function(){
   		<ul class="nav navbar-nav">
   			<li style="margin-left:2%;"><a href="index.html">Home</a></li>
   			<li class="dropdown">
-  				<a href="recipes.html" class="dropdown-toggle" data-toggle="dropdown" role="button" 
+  				<a href="recipes.php" class="dropdown-toggle" data-toggle="dropdown" role="button" 
   				aria-haspopup="true" aria-expanded="false">Recipes<span class="caret"></span></a>
           		<ul class="dropdown-menu">
-            		<li><a href="Views/breakfast.html">Breakfast</a></li>
-            		<li><a href="Views/lunch.html">Lunch</a></li>
-            		<li><a href="Views/dinner.html">Dinner</a></li>
-            		<li><a href="Views/dessert.html">Dessert</a></li>
-            		<li><a href="Views/snacks.html">Snacks</a></li>
-            		<li><a href="Views/appetizers.html">Appetizers</a></li>
-            		<li><a href="Views/drinks.html">Drinks</a></li>
+            		<li><a href="Views/breakfast.php">Breakfast</a></li>
+            		<li><a href="Views/lunch.php">Lunch</a></li>
+            		<li><a href="Views/dinner.php">Dinner</a></li> 
+            		<li><a href="Views/dessert.php">Dessert</a></li>
+            		<li><a href="Views/snacks.php">Snacks</a></li>
+            		<li><a href="Views/appetizers.php">Appetizers</a></li>
+            		<li><a href="Views/drinks.php">Drinks</a></li>
           		</ul>
   			</li>
-  			<li><a href="Views/users.html">Users</a></li>
+  			<li><a href="Views/users.php">Users</a></li>
   		<!--	<li><a href="#">Chatrooms</a></li> -->
   		</ul>
 	</nav>
@@ -160,9 +157,6 @@ $(document).ready(function(){
 
 
 
-	<div class="fb-page" data-href="https://www.facebook.com/vegbuddy" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/vegbuddy" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/vegbuddy">Veg Buddy</a></blockquote></div>
-	
-	</div>
 	
 
 	<!-- VIDEO OF THE WEEK -->
@@ -280,7 +274,7 @@ $(document).ready(function(){
 				the pesto. Serve with the bread, if desired.
 			</p>
 		</div><br><br>
-		<a href="Views/breakfast.html">
+		<a href="Views/breakfast.php">
 			<div class="btn-group btn-group-lg" id="indexreccta">
   				<button type="button" class="btn btn-primary">
   					SEE MORE RECIPIES
@@ -294,11 +288,11 @@ $(document).ready(function(){
 	<footer>
 		<div class="container" id="footer">
 			<ul class="nav navbar-nav" id="footernav">
-				<li><a href="Views/about.html">ABOUT US</a></li>
-				<li><a href="Views/privacy.html">PRIVACY POLICY</a></li>
-				<li><a href="Views/sitemap.html">SITE MAP</a></li>
-				<li><a href="Views/useragree.html">USER AGREEMENT</a></li>
-				<li><a href="Views/contact.html">CONTACT US</a></li><br>
+				<li><a href="Views/about.php">ABOUT US</a></li>
+				<li><a href="Views/privacy.php">PRIVACY POLICY</a></li>
+				<li><a href="Views/sitemap.php">SITE MAP</a></li>
+				<li><a href="Views/useragree.php">USER AGREEMENT</a></li>
+				<li><a href="Views/contact.php">CONTACT US</a></li><br>
 			</ul><br><br>
 			<h3>COPYRIGHT 2016 WEB EARTH COOP. 403 EUCLID AVE. SYRACUSE, NY 13023 WEBEARTHCOOP.NET</h3>
 		</div>
