--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 <!--VEG BUDDY 
 *************
 index.html
@@ -122,7 +122,7 @@ $(document).ready(function(){
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="images/caro_01.jpg" alt="...">
+      <img src="images/caro_01.jpg" alt="..." id="caropic">
       <div class="carousel-caption">
       	<h3><b>CLARK AND MARY FARMS</b><br>
 			Our friends from the Northern Cali farm have made a commitment to animals and good health.
@@ -130,13 +130,13 @@ $(document).ready(function(){
       </div>
     </div>
     <div class="item">
-      <img src="images/caro_02.jpg" alt="...">
+      <img src="images/caro_02.jpg" alt="..." id="caropic">
       <div class="carousel-caption">
       	<h3>Denton Vegan Coop. are dedicated to the production and promotion of making vegan goods more accessible to the Denton, TX area. They believe in educating the public on the benefits of a vegan diet regarding environment, ethics, and health to aid in a sustainable future for our planet.<br><a href="http://www.dentonvegancoop.com">dentonvegancoop.com</a></h3>
       </div>
     </div>
     <div class="item">
-      <img src="images/caro_03.png" alt="...">
+      <img src="images/caro_03.png" alt="..." id="caropic">
       <div class="carousel-caption">
       	<h3>Erin Mckennas Bakery selects all ingredients responsibly and uses our natural sweeteners sparingly. Their goal is to make eating vegan and gluten-free fun and delicious!<br><a href="https://www.erinmckennasbakery.com">erinmckennasbakery.com</a></h3>
       </div>
@@ -159,9 +159,9 @@ $(document).ready(function(){
 
 
 	<div class="fb-page">
-		<a href="www.facebook.com/VegBuddy"><img id="socmed" src="images/socmed-01.png"></a><br>
-		<a href="www.instagram.com/VegBuddy"><img id="socmed" src="images/socmed-02.png"></a><br>
-		<a href="www.twitter.com/VegBuddy"><img id="socmed" src="images/socmed-03.png"></a>
+		<a href="http://www.facebook.com/VegBuddy"><img id="socmed" src="images/socmed-01.png"></a><br>
+		<a href="http://www.instagram.com/VegBuddy"><img id="socmed" src="images/socmed-02.png"></a><br>
+		<a href="http://www.twitter.com/VegBuddy"><img id="socmed" src="images/socmed-03.png"></a>
 	</div>
 	
 
@@ -316,25 +316,4 @@ $(document).ready(function(){
 
 
 </body>
-
-=======
-<!--VEG BUDDY 
-*************
-index.html
-*************
- 6/2/16
--->
-
-<html>
-<meta charset="UTF-8">
-<meta name="description" content="Vegan Social Network">
-<title>VegBuddy - The New Hub for Vegans Everywhere</title>
-<head>
-<link rel="stylesheet" type="text/css" href="css/style.css">	
-</head>
-<body>
-	Veg Buddy
-	<img id="mainlogo" src="images/vb_logo.png">
-</body>
->>>>>>> master
 </html>
